--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <!-- bootstrap -->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
             <!-- CSS -->
+            <link rel="stylesheet" href="style/css/main.css" />
             <link rel="stylesheet" href="style/css/components/header.css" />
+            <link rel="stylesheet" href="style/css/components/firstSection.css" />
+            <link rel="stylesheet" href="style/css/components/secondSection.css" />
       </head>
       <body>
             <div class="annonce">
@@ -46,26 +49,43 @@
                   </div>
                   <div class="banner">
                         <div class="bannerContent1">
-                              <p><span>DATA</span> VAULT – <span>DATA</span> LAKES – <span>DATA</span> MARTS – <span>DATA</span> CLOUD – <span>DATA</span> WAREHOUSES – <span>STRATEGY</span> EXECUTION - </p>
-                              <!-- <p><span>DATA</span> VAULT –</p>
-                              <p><span>DATA</span> LAKES –</p>
-                              <p><span>DATA</span> MARTS –</p>
-                              <p><span>DATA</span> CLOUD –</p>
-                              <p><span>DATA</span> WAREHOUSES –</p>
-                              <p><span>STRATEGY</span> EXECUTION -</p> -->
+                              <p><span>DATA</span> VAULT – <span>DATA</span> LAKES – <span>DATA</span> MARTS – <span>DATA</span> CLOUD – <span>DATA</span> WAREHOUSES – <span>STRATEGY</span> EXECUTION -</p>
                         </div>
                         <div class="bannerContent2">
-                            <p><span>DATA</span> VAULT – <span>DATA</span> LAKES – <span>DATA</span> MARTS – <span>DATA</span> CLOUD – <span>DATA</span> WAREHOUSES – <span>STRATEGY</span> EXECUTION - </p>
-                            <!-- <p><span>DATA</span> VAULT –</p>
-                            <p><span>DATA</span> LAKES –</p>
-                            <p><span>DATA</span> MARTS –</p>
-                            <p><span>DATA</span> CLOUD –</p>
-                            <p><span>DATA</span> WAREHOUSES –</p>
-                            <p><span>STRATEGY</span> EXECUTION -</p> -->
-                      </div>
+                              <p><span>DATA</span> VAULT – <span>DATA</span> LAKES – <span>DATA</span> MARTS – <span>DATA</span> CLOUD – <span>DATA</span> WAREHOUSES – <span>STRATEGY</span> EXECUTION -</p>
+                        </div>
                   </div>
             </header>
-            <main></main>
+            <main>
+                  <div class="container mt-100">
+                        <div class="row">
+                              <div class="col">
+                                    <h2 class="w600 fs3rem">Get out of the chaos</h2>
+                              </div>
+                              <div class="col">
+                                    <p class="fs18px">In today’s perpetual disruption and digital transformation era, volume of data managed expand exponentially and change the way organizations do business. This comes as little surprise and induces a rising demand for data-driven customer experiences, together with changing data volume/sources and quality requirements.</p>
+                                    <p>However, company runs their processes over hundreds of systems that don’t play nice together, leaving a lot of room for inefficiencies to hide that are silent killers to your business performance.</p>
+                                    <p>While many companies state they want to be data-driven, most have only begun to scratch the surface in terms of realizing the full potential of this rich resource.</p>
+                                    <p>Pilot'in recognizes the right for organizations to become truly data-driven, moving from a fragmented view to a global vision and drive their strategy even further.</p>
+                                    <div class="btnBlue fs18px">
+                                          <p>Discover our vision</p>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="container-fluid mt-300 p-5 helpContainer">
+                    <div class="row imgDataRow">
+                        <div class="col text-center">
+                            <img class="imgDataAnalyst" src="style/imgs/computer-screen-data-score-analyst.png" alt="data score analyst">
+                        </div>
+                    </div>
+                        <div class="row">
+                              <div class="col">
+                                    <h2 class="w600 white text-center helpTitle">How we help tackle these <span>challenges</span> ?</h2>
+                              </div>
+                        </div>
+                  </div>
+            </main>
             <footer></footer>
       </body>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
