--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             <link rel="stylesheet" href="style/css/normalize.css" />
             <!-- bootstrap -->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
             <!-- CSS -->
             <link rel="stylesheet" href="style/css/main.css" />
             <link rel="stylesheet" href="style/css/components/header.css" />
             <link rel="stylesheet" href="style/css/components/firstSection.css" />
             <link rel="stylesheet" href="style/css/components/secondSection.css" />
+            <link rel="stylesheet" href="style/css/components/carrousel.css" />
       </head>
       <body>
             <div class="annonce">
@@ -74,14 +77,148 @@
                         </div>
                   </div>
                   <div class="container-fluid mt-300 p-5 helpContainer">
-                    <div class="row imgDataRow">
-                        <div class="col text-center">
-                            <img class="imgDataAnalyst" src="style/imgs/computer-screen-data-score-analyst.png" alt="data score analyst">
+                        <div class="row imgDataRow">
+                              <div class="col text-center">
+                                    <img class="imgDataAnalyst" src="style/imgs/computer-screen-data-score-analyst.png" alt="data score analyst" />
+                              </div>
                         </div>
-                    </div>
                         <div class="row">
                               <div class="col">
                                     <h2 class="w600 white text-center helpTitle">How we help tackle these <span>challenges</span> ?</h2>
+                              </div>
+                        </div>
+                        <div class="row mt-100">
+                              <div class="col">
+                                    <div class="container helpCard">
+                                          <div class="row align-items-center">
+                                                <div class="col-lg-6 col-sm-12 d-flex justify-content-center">
+                                                      <img class="factoryImg" src="style/imgs/Datafactory-v3.png" alt="data factory" />
+                                                </div>
+                                                <div class="col-lg-6 col-sm-12 d-flex justify-content-center flex-column">
+                                                      <h2 class="w600 firstCardTitle"><i class="fa-solid fa-chart-line"></i>DATAFACTORY</h2>
+                                                      <p>Build your next generation data warehouse automation platform with its unique low-code/no-code approach. Accelerate your business today and generate untapped value from your organization's data.</p>
+                                                      <ul class="listCard w600">
+                                                            <li><i class="fa-regular fa-file fa-fw fa-border fa-2x"></i>Manage and orchestrate</li>
+                                                            <li><i class="fa-solid fa-lock fa-fw fa-border fa-2x"></i>Dispatch powerd elements</li>
+                                                            <li><i class="fa-solid fa-chart-pie fa-fw fa-border fa-2x"></i>Manage and orchestrate</li>
+                                                            <li><i class="fa-regular fa-file fa-fw fa-border fa-2x"></i>Manage and orchestrate</li>
+                                                      </ul>
+                                                      <div class="btnOrange">
+                                                            <p>Découvrir la solution</p>
+                                                      </div>
+                                                </div>
+                                          </div>
+                                    </div>
+                                    <div class="container helpCard2">
+                                          <div class="row align-items-center">
+                                                <div class="col-lg-6 col-sm-12 d-flex justify-content-center flex-column">
+                                                      <h2 class="w600 firstCardTitle"><i class="fa-solid fa-diagram-project"></i>PROPILOT</h2>
+                                                      <p>Plan, do, check and align all your strategic plans in one single platform designed and built for modern and efficient organizations. No more spreadsheets sent via emails or time wasted for reconciliation. Focus on what really matters, achieving your goals.</p>
+                                                      <ul class="listCard w600">
+                                                            <li><i class="fa-solid fa-network-wired fa-fw fa-border fa-2x"></i>Connect strategic plans to execution</li>
+                                                            <li><i class="fa-solid fa-chart-column fa-fw fa-border fa-2x"></i>Know the status of plans</li>
+                                                            <li><i class="fa-solid fa-triangle-exclamation fa-fw fa-border fa-2x"></i>Adapt quickly to changes</li>
+                                                            <li><i class="fa-solid fa-trophy fa-fw fa-border fa-2x"></i>Reward real achiviers</li>
+                                                      </ul>
+                                                      <div class="btnOrange2">
+                                                            <p>Learn more about ProPilot</p>
+                                                      </div>
+                                                </div>
+                                                <img class="bigEllipse" src="style/imgs/ellipse/bigEllipse.png" alt="big ellipse" />
+                                                <div class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-end ipad">
+                                                      <div class="container ipadBg">
+                                                            <div class="row">
+                                                                  <div class="col">
+                                                                        <h3 class="w600">Step 01</h3>
+                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
+                                                                        <div class="spinner d-flex justify-content-center align-items-center">
+                                                                              <img class="ellipse" src="style/imgs/ellipse/Ellipse 21.png" alt="ellipse 2" />
+                                                                              <img class="ellipse" src="style/imgs/ellipse/Ellipse 23.png" alt="ellipse 3" />
+                                                                        </div>
+                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
+                                                                  </div>
+                                                                  <div class="col">
+                                                                        <h3 class="w600">Step 02</h3>
+                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
+                                                                        <div class="spinner d-flex justify-content-center align-items-center">
+                                                                              <img class="ellipse" src="style/imgs/ellipse/Ellipse 21.png" alt="ellipse 2" />
+                                                                              <img class="ellipse" src="style/imgs/ellipse/Ellipse 23.png" alt="ellipse 3" />
+                                                                        </div>
+                                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
+                                                                  </div>
+                                                            </div>
+                                                      </div>
+                                                </div>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="container">
+                        <div class="row">
+                              <div class="col">
+                                    <h2 class="w600 text-center">They trust Pilot'in.</h2>
+                                    <h3 class="text-center">Why not you ?</h3>
+                                    <div class="container carrousel mt-100">
+                                          <div class="row">
+                                                <div class="col imgCol">
+                                                      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+                                                            <div class="carousel-inner">
+                                                                  <div class="carousel-item active">
+                                                                        <img src="style/imgs/brands/Casclient-Exki.jpeg" class="d-block" alt="..." />
+                                                                        <div class="iconContainer">
+                                                                              <i class="fa-solid fa-play"></i>
+                                                                        </div>
+                                                                        <div class="carousel-caption d-none d-md-block">
+                                                                              <img src="style/imgs/brands/exki.png" alt="exki logo" />
+                                                                              <h3>Thierry Soubestre</h3>
+                                                                              <p>In a few weeks, 5 critical financial data sources were integrated and information is now available every day.</p>
+                                                                        </div>
+                                                                  </div>
+                                                                  <div class="carousel-item">
+                                                                        <img src="style/imgs/brands/Casclient-DITP.jfif" class="d-block" alt="..." />
+                                                                        <div class="iconContainer">
+                                                                              <i class="fa-solid fa-play"></i>
+                                                                        </div>
+                                                                        <div class="carousel-caption d-none d-md-block">
+                                                                              <img src="style/imgs/brands/ditp.png" alt="exki logo" />
+                                                                              <h3>Bruno Parent</h3>
+                                                                              <p>With propilot, we are able to share information in real time and use this effectively to steer the covid19 recovery plan across all ministries</p>
+                                                                        </div>
+                                                                  </div>
+                                                                  <div class="carousel-item">
+                                                                        <img src="style/imgs/brands/Casclient-BNPParibas.jpg" class="d-block" alt="..." />
+                                                                        <div class="iconContainer">
+                                                                              <i class="fa-solid fa-play"></i>
+                                                                        </div>
+                                                                        <div class="carousel-caption d-none d-md-block">
+                                                                              <img src="style/imgs/brands/bnp.png" alt="exki logo" />
+                                                                              <h3>Hervé Gouëzel</h3>
+                                                                              <p>The solutions offered by Pilot'in let us keep control of our plan. In the end, we were able to largely surpass our initial objectives.</p>
+                                                                        </div>
+                                                                  </div>
+                                                            </div>
+                                                            <div class="textCol">
+                                                                  <div class="fleche">
+                                                                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                                              <span class="visually-hidden">Previous</span>
+                                                                        </button>
+                                                                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                                              <span class="visually-hidden">Next</span>
+                                                                        </button>
+                                                                  </div>
+                                                                  <div class="carousel-indicators">
+                                                                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                                                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                                                  </div>
+                                                            </div>
+                                                      </div>
+                                                </div>
+                                          </div>
+                                    </div>
                               </div>
                         </div>
                   </div>
