--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <link rel="stylesheet" href="style/css/components/firstSection.css" />
             <link rel="stylesheet" href="style/css/components/secondSection.css" />
             <link rel="stylesheet" href="style/css/components/carrousel.css" />
+            <link rel="stylesheet" href="style/css/components/blog.css" />
       </head>
       <body>
             <div class="annonce">
@@ -217,6 +218,58 @@
                                                             </div>
                                                       </div>
                                                 </div>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="container mt-100 mb-100">
+                        <div class="row">
+                              <div class="col">
+                                    <h2 class="w600 text-center">Nos articles de blog</h2>
+                                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Est ridiculus velit interdum aliquam libero sit a in. Id nibh vitae, massa sed a vel ultricies pharetra auctor. Libero sed facilisi faucibus etiam aliquet amet, purus, tortor, cursus. Mauris malesuada morbi ultrices diam amet fringilla adipiscing faucibus quis.</p>
+                              </div>
+                        </div>
+                        <div class="row mt-100 justify-content-around blogCardContainer">
+                              <div class="col blogCard">
+                                    <p class="category">Catégorie</p>
+                                    <h3>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des points…</h3>
+                                    <p class="mt-30 blogTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                                    <div class="cardFoot">
+                                          <div class="hostName">
+                                                <img src="style/imgs/head/host.jfif" alt="auteur de l'article" />
+                                                <p>Julien Dereumaux - Capitaine de Pilot’in</p>
+                                          </div>
+                                          <div class="readMore">
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                          </div>
+                                    </div>
+                              </div>
+                              <div class="col blogCard">
+                                    <p class="category">Catégorie</p>
+                                    <h3>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des points…</h3>
+                                    <p class="mt-30 blogTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                                    <div class="cardFoot">
+                                          <div class="hostName">
+                                                <img src="style/imgs/head/host.jfif" alt="auteur de l'article" />
+                                                <p>Julien Dereumaux - Capitaine de Pilot’in</p>
+                                          </div>
+                                          <div class="readMore">
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                          </div>
+                                    </div>
+                              </div>
+                              <div class="col blogCard">
+                                    <p class="category">Catégorie</p>
+                                    <h3>Titre de l’article sur une ou plusieurs lignes. Au delà de 100 caractères le texte sera masqué par des points…</h3>
+                                    <p class="mt-30 blogTxt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit mi a facilisi bibendum erat euismod nulla sagittis. Semper urna molestie arcu sit id. Ultricies purus lectus consectetur imperdiet aliquam eu, rutrum erat consectetur. Blandit</p>
+                                    <div class="cardFoot">
+                                          <div class="hostName">
+                                                <img src="style/imgs/head/host.jfif" alt="auteur de l'article" />
+                                                <p>Julien Dereumaux - Capitaine de Pilot’in</p>
+                                          </div>
+                                          <div class="readMore">
+                                                <i class="fa-solid fa-arrow-right"></i>
                                           </div>
                                     </div>
                               </div>
