--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
             <link rel="stylesheet" href="style/css/components/secondSection.css" />
             <link rel="stylesheet" href="style/css/components/carrousel.css" />
             <link rel="stylesheet" href="style/css/components/blog.css" />
+            <link rel="stylesheet" href="style/css/components/demo.css" />
+            <link rel="stylesheet" href="style/css/components/footer.css" />
       </head>
       <body>
             <div class="annonce">
@@ -274,9 +276,77 @@
                                     </div>
                               </div>
                         </div>
+                        <div class="row">
+                              <div class="col text-center">
+                                    <p class="blogBtn">Tous les articles</p>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="container demoContainer mb-100">
+                        <div class="row">
+                              <div class="col"></div>
+                              <div class="col demoCol justify-content-center">
+                                    <h2 class="w600 white">Ready to meet the future of your organization?</h2>
+                                    <h3 class="w600 white">Begin your data-driven transformation today!</h3>
+                                    <p class="demoBtn">Book a demo</p>
+                              </div>
+                        </div>
                   </div>
             </main>
-            <footer></footer>
+            <footer>
+                  <div class="container">
+                        <div class="row">
+                              <div class="col">
+                                    <h3>Get involved</h3>
+                                    <ul>
+                                          <li>About us</li>
+                                          <li>Join us</li>
+                                          <li>Contact us</li>
+                                    </ul>
+                              </div>
+                              <div class="col">
+                                    <h3>Belgium</h3>
+                                    <p>Nom et numéro de la voie</p>
+                                    <ul>
+                                          <li>+33 000000000</li>
+                                    </ul>
+                              </div>
+                              <div class="col">
+                                    <h3>France</h3>
+                                    <p>Nom et numéro de la voie</p>
+                                    <ul>
+                                          <li>+33 000000000</li>
+                                    </ul>
+                              </div>
+                              <div class="col lastCol">
+                                    <h3>Suivez nous sur nos réseaux</h3>
+                                    <ul class="socialList">
+                                          <li><i class="fa-brands fa-twitter"></i></li>
+                                          <li><i class="fa-brands fa-linkedin"></i></li>
+                                    </ul>
+                              </div>
+                        </div>
+                  </div>
+                  <div class="container-fluid footerBande mt-30">
+                        <div class="container">
+                              <div class="row">
+                                    <div class="col">
+                                          <div class="links">
+                                                <h4>Pilot'in 2022 -</h4>
+                                                <a href="#">CGV - </a>
+                                                <a href="#">Cookies - </a>
+                                                <a href="#">Mentions légales</a>
+                                          </div>
+                                    </div>
+                                    <div class="col">
+                                          <div class="marque">
+                                                <h4>Mis à flot par <span>Pilot'in</span></h4>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+            </footer>
       </body>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
