--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
                                                                   <h2>Discover all our ressources</h2>
                                                             </div>
                                                             <div class="row mt-30">
-                                                                  <div class="col">
+                                                                  <div class="col-lg-3 col-md-6 col-sm-6">
                                                                         <h3><i class="fa-solid fa-chart-line"></i>DATAFACTORY</h3>
                                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, corporis!</p>
                                                                   </div>
-                                                                  <div class="col">
+                                                                  <div class="col-lg-3 col-md-6 col-sm-6">
                                                                         <h3><i class="fa-solid fa-chart-line"></i>DATAFACTORY</h3>
                                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, corporis!</p>
                                                                   </div>
-                                                                  <div class="col">
+                                                                  <div class="col-lg-3 col-md-6 col-sm-6">
                                                                         <h3><i class="fa-solid fa-chart-line"></i>DATAFACTORY</h3>
                                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, corporis!</p>
                                                                   </div>
-                                                                  <div class="col">
+                                                                  <div class="col-lg-3 col-md-6 col-sm-6">
                                                                         <h3><i class="fa-solid fa-chart-line"></i>DATAFACTORY</h3>
                                                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, corporis!</p>
                                                                   </div>
@@ -92,7 +92,7 @@
                                                 <a class="nav-link" href="#">Company</a>
                                           </li>
                                     </ul>
-                                    <div class="d-flex">
+                                    <div class="d-flex navRight">
                                           <button class="btnNav" type="submit">Free demo</button>
                                           <ul class="navbar-nav me-auto mb-2 mb-lg-0 ulRight">
                                                 <li class="nav-item dropdown langDrop">
@@ -139,8 +139,8 @@
                   </div>
             </header>
             <main>
-                  <div class="container-fluid mt-100 relative">
-                        <div class="container">
+                  <div class="container-fluid mt-100 relative firstSectionContainer">
+                        <div class="container firstSectionContainer">
                               <div class="row">
                                     <div class="col-lg-6 col-xs-12">
                                           <h2 class="w600 fs3rem">Get out of the chaos</h2>
@@ -212,7 +212,7 @@
                                                 <div class="col-lg-6 col-sm-12 d-flex justify-content-center align-items-end ipad">
                                                       <div class="container ipadBg">
                                                             <div class="row">
-                                                                  <div class="col">
+                                                                  <div class="col-lg-6 col-xs-12 colSpinner">
                                                                         <h3 class="w600">Step 01</h3>
                                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
                                                                         <div class="spinner d-flex justify-content-center align-items-center">
@@ -221,7 +221,7 @@
                                                                         </div>
                                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
                                                                   </div>
-                                                                  <div class="col">
+                                                                  <div class="col-lg-6 col-xs-12 colSpinner">
                                                                         <h3 class="w600">Step 02</h3>
                                                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, quos? Voluptatibus architecto laudantium similique nemo quisquam rerum hic in et natus vitae assumenda eligendi odit, culpa asperiores? Quo, voluptatem autem!</p>
                                                                         <div class="spinner d-flex justify-content-center align-items-center">
@@ -367,7 +367,7 @@
                   </div>
                   <div class="container demoContainer mb-100">
                         <div class="row">
-                              <div class="col"></div>
+                              <div class="col demoColEmpty"></div>
                               <div class="col demoCol justify-content-center">
                                     <h2 class="w600 white">Ready to meet the future of your organization?</h2>
                                     <h3 class="w600 white">Begin your data-driven transformation today!</h3>
@@ -379,7 +379,7 @@
             <footer>
                   <div class="container">
                         <div class="row">
-                              <div class="col">
+                              <div class="col-lg-3 col-md-4 col-sm-4">
                                     <h3>Get involved</h3>
                                     <ul>
                                           <li>About us</li>
@@ -387,21 +387,21 @@
                                           <li>Contact us</li>
                                     </ul>
                               </div>
-                              <div class="col">
+                              <div class="col-lg-3 col-md-4 col-sm-4">
                                     <h3>Belgium</h3>
                                     <p>Nom et numéro de la voie</p>
                                     <ul>
                                           <li>+33 000000000</li>
                                     </ul>
                               </div>
-                              <div class="col">
+                              <div class="col-lg-3 col-md-4 col-sm-4">
                                     <h3>France</h3>
                                     <p>Nom et numéro de la voie</p>
                                     <ul>
                                           <li>+33 000000000</li>
                                     </ul>
                               </div>
-                              <div class="col lastCol">
+                              <div class="col-lg-3 col-xs-12 lastCol">
                                     <h3>Suivez nous sur nos réseaux</h3>
                                     <ul class="socialList">
                                           <li><i class="fa-brands fa-twitter"></i></li>
@@ -413,7 +413,7 @@
                   <div class="container-fluid footerBande mt-30">
                         <div class="container">
                               <div class="row">
-                                    <div class="col">
+                                    <div class="col-sm-9 col-xs-12">
                                           <div class="links">
                                                 <h4>Pilot'in 2022 -</h4>
                                                 <a href="#">CGV - </a>
@@ -421,7 +421,7 @@
                                                 <a href="#">Mentions légales</a>
                                           </div>
                                     </div>
-                                    <div class="col">
+                                    <div class="col-sm-3 col-xs-12">
                                           <div class="marque">
                                                 <h4>Mis à flot par <span>Pilot'in</span></h4>
                                           </div>
